update dependencies with fixes